reorganization of file structure

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Todolist</title>
-    <link rel="stylesheet" href="/styles/homepageStyle.css">
+    <link rel="stylesheet" href="./homepage-style.css">
     <script src="/backend/script.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
