--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Portfolio - Web developer/ Designer: Diana</title>
-    <link rel="stylesheet" href="/styles/portfolio-styles.css">
+    <link rel="stylesheet" href="./portfolio-style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
